--- a/desafio09_conversor/index.html
+++ b/desafio09_conversor/index.html
@@ -1,17 +1,111 @@
 <!DOCTYPE html>
 <html lang="ot-br">
+
 <head>
    <meta charset="UTF-8">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>BoraCodar#09 - Conversor de moedas</title>
 
    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-   
+   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css" />
+
+</head>
+
+<body>
+
+   <main>
+      <section class="conversor">
+         <h2>Conversor de moedas</h2>
+
+         <div class="wrapper">
+            <div class="money-wrapper">
+               <input type="text" class="amount" value="$1.000">
+
+               <div class="dropdown">
+                  <div class="selected">
+                     <span class="fi fi-us fis"></span>
+                     USD
+                  </div>
+
+                  <ul>
+                     <li>
+                        <span class="fi fi-br fis"></span>
+                        BRL
+                     </li>
+
+                     <li>
+                        <span class="fi fi-us fis"></span>
+                        USD
+                     </li>
+
+                     <li>
+                        <span class="fi fi-eu fis"></span>
+                        EUR
+                     </li>
+
+                     <li>
+                        <span class="fi fi-gb fis"></span>
+                        GBP
+                     </li>
+                  </ul>
+               </div>
+            </div>
+
+            <div class="middle">
+               <img src="./assets/arrows-exchange.svg" alt="">
+            </div>
+
+            <div class="money-wrapper">
+               <input readonly type="text" class="amount" value="R$5.148,20">
+
+               <div class="dropdown">
+                  <div class="selected">
+                     <span class="fi fi-br fis"></span>
+                     BRL
+                  </div>
+
+                  <ul>
+                     <li>
+                        <span class="fi fi-br fis"></span>
+                        BRL
+                     </li>
+
+                     <li>
+                        <span class="fi fi-us fis"></span>
+                        USD
+                     </li>
+
+                     <li>
+                        <span class="fi fi-eu fis"></span>
+                        EUR
+                     </li>
+
+                     <li>
+                        <span class="fi fi-gb fis"></span>
+                        GBP
+                     </li>
+                  </ul>
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <section class="cambio">
+         <h2>Taxa de câmbio</h2>
+
+         <div class="wrapper">
+
+         </div>
+      </section>
+   </main>
 
    <script src="./script.js"></script>
 </body>
+
 </html>
