--- a/desafio09_conversor/index.html
+++ b/desafio09_conversor/index.html
@@ -100,11 +100,22 @@
          <h2>Taxa de câmbio</h2>
 
          <div class="wrapper">
+            <div id="chart"></div>
+            
+            <div class="chart-controls">
+               <button>1D</button>
+               <button>5D</button>
+               <button class="active">1M</button>
+               <button>1A</button>
+               <button>5A</button>
+               <button>Máx</button>
+            </div>
 
          </div>
       </section>
    </main>
 
+   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
    <script src="./script.js"></script>
 </body>
 
