--- a/desafio13_cartao/index.html
+++ b/desafio13_cartao/index.html
@@ -1,18 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formulário cartão de crédito</title>
 
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <form>
     <section id="credit-card">
       <div class="front"></div>
       <div class="back"></div>
     </section>
+
+    <section class="inputs flex">
+      <div class="input-wrapper">
+        <label for="cc-number">Número do cartão</label>
+        <input id="cc-number" type="text" placeholder="**** **** **** ****">
+      </div>
+
+      <div class="input-wrapper">
+        <label for="cc-holder">Nome do titular</label>
+        <input id="cc-holder" type="text" placeholder="Nome como está no cartão" required>
+
+        <div class="warning">
+          <img 
+          src="./assets/Warning.svg" 
+          alt="ícone de alerta">
+          Nome do titular é obrigatório
+        </div>
+      </div>
+
+      <div class="col-2 flex">
+        <div class="input-wrapper">
+          <label for="cc-validity">Validade</label>
+          <input type="text" id="cc-validity" placeholder="mm/aa">
+        </div>
+
+        <div class="input-wrapper">
+          <label class="flex help" for="cc-cvv">CVV
+
+            <img src="./assets/Question.svg" alt="ícone de ajuda"
+              title="Esse número está, geralmente, na parte de trás do cartão">
+          </label>
+          <input type="text" id="cc-cvv" placeholder="***">
+        </div>
+      </div>
+
+    </section>
+
+    <section class="info-security flex">
+      <img src="./assets/ShieldCheck.svg" alt="ícone de segurança">
+
+      Seus dados estão seguros
+    </section>
+
+    <button>Adicionar cartão</button>
   </form>
 </body>
+
 </html>
