Aplicando máscara de validação com a lib IMask

--- a/desafio13_cartao/index.html
+++ b/desafio13_cartao/index.html
@@ -65,6 +65,10 @@
 
     <button>Adicionar cartão</button>
   </form>
+
+  <!-- IMask -->
+  <script src="https://unpkg.com/imask"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
