feat: add javascript to connect to githubAPI

--- a/desafio33_geradorTicket/index.html
+++ b/desafio33_geradorTicket/index.html
@@ -13,6 +13,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Space+Grotesk:wght@400;700&display=swap"
     rel="stylesheet">
+
+    <script src="./main.js" defer></script>
 </head>
 
 <body>
